# sailor

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  run.sh
include/: keyboard.h  program.h  tty.h
src/: keyboard.c  main.c
